[Fix] -> Adding left and right padding 20px to the page template full width stretched.

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -5335,6 +5335,10 @@ input[type="color"]::-webkit-color-swatch {
   padding: 4em 0em 0em 0em;
 }
 
+.ast-page-builder-template .comments-area {
+  padding: 4em 1.3em 0em 1.3em;
+}
+
 .comment-respond {
   padding: 2.25em 0em 0em 0em;
   border-top: 1px solid #eaeaea;
