--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -327,6 +327,12 @@
     }
 }
 
+.ast-page-builder-template {
+    .comments-area {
+        padding: 4em 1.3em 0em 1.3em;
+    }
+}
+
 .comment-respond {
     padding: 2.25em 0em 0em 0em;
     border-top: 1px solid #eaeaea;
